ukui-settings-daemon (3.1.0-1.19) v101; urgency=medium

  * BUG号：79667 【同SP1 【UKUI V3.1】【OSD】触摸板锁未出现热键弹窗，且触摸板锁功能失效
           59425 【亮剑行动】【联想】【快捷键】按下触摸板控制按键，无法禁用触摸板
           89183 【声音】连接hdmi或蓝牙耳机，快捷键静音和快捷键调节音量不生效


  * 需求说明：无
  * 其他改动说明：无
  
 -- sundagao <sundagao@kylinos.cn>  Fri, 19 Nov 2021 15:40:15 +0800

ukui-settings-daemon (3.1.0-1.18) v101; urgency=medium

  * BUG号：(ZI)91100 【S】【PTOF】【键盘】通过快捷键f3、f4调节屏幕亮度时，亮度值调节间隔不一致（必现）
           (ZI)91005 【键盘】【电源管理】使用快捷键F3降低亮度至最小值10后，再次点击F3，每次点击亮度会继续变暗或变亮（必现）
           (ZI)91162 【S】【PTOF】【鼠标】控制面板鼠标界面开启按ctrl键时显示指针位置，在各界面点击ctrl无反应（必现）
           (ZI)91299 【S】【触控笔】平板模式旋转方向以后，按触控笔的按钮一，触控点偏移(必现)
           (ZS)82433 【截图】【PTOF】下拉框展开状态下，快捷键截图失效
          （ZI）91771 【S】【PTOF】【显示器】【触摸】连接外显，控制面板中设置系统投屏模式为镜像后，触摸偏移，通过快捷键设置无此现象（必现）
          （ZI）91299 【S】【触控笔】平板模式旋转方向以后，按触控笔的按钮一，触控点偏移(必现)
  * 需求说明：无
  * 其他改动说明：无

 -- sundagao <sundagao@kylinos.cn>  Tue, 16 Nov 2021 18:36:52 +0800

ukui-settings-daemon (3.1.0-1.16) v101; urgency=medium

  * BUG号：90170 【PTOF】【触控板】开启“插入鼠标时禁用触控板”，插入鼠标后触控板被禁用，拔出鼠标后触摸板仍被禁用（必现）
           89602 【键盘】开机后多次热插拔外接键盘，触摸板失效，注销后重新登录恢复（概率：18/20）
  *需求说明：无
  *其他修改说明：1.针对fn热键增加x的处理，优化某些热键相应过于频繁问题。
                 2.增加dbus提权服务，支持相机热键。

 -- sundagao <sundagao@kylinos.cn>  Fri, 12 Nov 2021 15:27:35 +0800

ukui-settings-daemon (3.1.0-1.15) v101; urgency=medium

    * BUG号：ZS  88899 【显示】切换显示模式为镜像/扩展屏/第一屏/其他屏，按下win+p都默认显示为第一个选项
          ZS 83852 【arm鲲鹏】【monitor test】arm台式机设置镜像屏之后关闭副屏，重启，主屏花屏，然后打开副屏，主屏恢复正常。
          ZS 83852 【arm鲲鹏】【monitortest】arm台式机设置镜像屏之后关闭副屏，重启，主屏花屏，然后打开副屏，主屏恢复正常。
          GS 89656 【键盘】休眠/睡眠唤醒后，使用F6/F7调节音量功能失效，重启后无法恢复（3/3units,9/10times）

          ZS 89082 【控制面板】【显示】双屏显示为非复制模式，使用win+p切换为复制，无反应
          ZS 90008 【前线】【外部禅道编号6237】【双屏|显示】【创智成TR4261】通过fn+f2切换系统投屏后分辨率会自动调至到最佳分辨率1920*1080
          GS 89156 【控制面板】【显示】夜间模式，调节屏幕色温失效。
          ZS 89742 【显示】连接1个HDMI显示器，打开控制面板-显示器，按下win+p，第二行显示“无”，选择“无”，控制面板的缩略图置灰。依次选择镜像和扩展，控制面板崩溃
          ZS 61912 【快捷键】【103537】打开右键菜单后，按笔记本音量调节热键无反应
  * 需求说明：无
  * 其他改动说明：无
